# pyakmc

./: .dockerignore  Makefile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: Dockerfile
docs/: conf.py  index.rst
pyakmc/: configuration.py
pyakmc/core/: ontology.py  runner.py
pyakmc/core/actions/: action.py  base.py  run.py  simulation.py  step.py
pyakmc/output/: file.py
pyakmc/timeseries/: configuration.py  ontology.py
pyakmc/timeseries/actions/: run.py
tests/: test_cli.py
