[project]
name = "pyakmc"
version = "0.1.0"
description = "Python Monte Carlo Framework"
authors = [
    {name = "kwierman",email = "kwierman@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
pydocstyle = "^6.3.0"
pylint = "^3.3.7"
pytest = "^8.4.1"
pyupgrade = "^3.20.0"
coverage = "^7.9.1"
coverage-badge = "^1.1.2"
pytest-html = "^4.1.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
